Cambio de titulo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>ARENAS COYUNTA</h1>
     </header>
     <main>
-        <h2>La Empresa</h2>
+        <h2>Nuestra Empresa</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellat eaque quos ipsam quod cumque
             cupiditate omnis! Id minima eum asperiores non eaque necessitatibus. Unde laudantium provident veniam?
             Facilis doloremque similique dolorem reprehenderit. Fugiat quas aut sint dolore hic odit est, cumque
