Full responsive corregido

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -14,6 +14,7 @@
     <header>
         <div class="divMenu">
             <nav class="navegador">
+                <H1>LOGO</H1>
                 <ul class="menu">
                     <li class="menu__item"><a href="../index.html">Inicio</a></li>
                     <li class="menu__item"><a href="../html/nosotros.html">Sobre Nosotros</a></li>
@@ -23,9 +24,10 @@
                 </ul>
             </nav>
         </div>
-        <h1>Sobre Nosotros</h1>
+        <span>Sobre Nosotros</span>
     </header>
-    <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, corrupti beatae molestias commodi maxime
+    <h2>Acerca de nosotros:</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, corrupti beatae molestias commodi maxime
         sequi facere iusto, ut nemo deserunt a earum optio dolorem possimus architecto obcaecati in nulla ipsam
         voluptates ab quisquam exercitationem voluptatum molestiae harum. Blanditiis perspiciatis rem dignissimos
         officia, ipsa consequatur, maxime fuga quasi maiores labore magni! Perspiciatis corporis mollitia veniam
@@ -39,7 +41,7 @@
         dolorem eaque laboriosam, eum temporibus illo itaque fugiat cupiditate asperiores velit rem. Reiciendis
         dicta tenetur corrupti tempore, assumenda eos possimus ea molestias deleniti iure, porro vel odio beatae
         odit neque delectus aperiam? Voluptatibus cumque sunt esse eveniet fugiat corrupti sit beatae, dolor ipsam.
-        Delectus impedit laborum magni quod?</span>
+        Delectus impedit laborum magni quod?</p>
     <main>
 
 
