--- a/html/ubicacion.html
+++ b/html/ubicacion.html
@@ -16,6 +16,7 @@
         <header>
             <div class="divMenu">
                 <nav class="navegador">
+                    <H1>LOGO</H1>
                     <ul class="menu">
                         <li class="menu__item"><a href="../index.html">Inicio</a></li>
                         <li class="menu__item"><a href="../html/nosotros.html">Sobre Nosotros</a></li>
@@ -25,14 +26,14 @@
                     </ul>
                 </nav>
             </div>
-            <h1>Ubicación</h1>
+            <span>Ubicación</span>
         </header>
-
-       <div class="iframe">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d193.69408438475023!2d-67.53836253274376!3d-39.03571734931531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1658446804548!5m2!1ses-419!2sar"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+<h2>Encontranos en:</h2>
+        <div class="iframe">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d193.69408438475023!2d-67.53836253274376!3d-39.03571734931531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1658446804548!5m2!1ses-419!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
     <footer>
