--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
     <title>Arenas Coyunta</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <!-- Menú -->
-    <header class="header">
-        <div class="divMenu">
-            <img class="logo" src="./img/logomejorado4.png" alt="Logo">
-            <nav class="navegador">
-                <ul class="menu">
-                    <li class="menu__item"><a href="index.html">Inicio</a></li>
-                    <li class="menu__item"><a href="./html/nosotros.html">Sobre Nosotros</a></li>
-                    <li class="menu__item"><a href="./html/productos.html">Nuestros Productos</a></li>
-                    <li class="menu__item"><a href="./html/contactos.html">Contácto</a></li>
-                    <li class="menu__item"><a href="./html/ubicacion.html">Ubicación</a></li>
-                </ul>
-            </nav>
-        </div>
-        <!-- Titulo -->
-        <h1>ARENAS COYUNTA</h1>
+    <header>
+
+        <nav class="navegador">
+            <H1>LOGO</H1>
+            <ul class="menu">
+                <li class="menu__item"><a href="index.html">Inicio</a></li>
+                <li class="menu__item"><a href="./html/nosotros.html">Sobre Nosotros</a></li>
+                <li class="menu__item"><a href="./html/productos.html">Nuestros Productos</a></li>
+                <li class="menu__item"><a href="./html/contactos.html">Contácto</a></li>
+                <li class="menu__item"><a href="./html/ubicacion.html">Ubicación</a></li>
+            </ul>
+        </nav>
+
     </header>
+    <!-- Titulo -->
+    <span class="arenas">ARENAS COYUNTA</span>
+
+
+
     <main>
         <h2>Nuestra Empresa</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis repellat eaque quos ipsam quod cumque
@@ -71,12 +75,12 @@
         </section> -->
         <!-- Multimedia -->
         <div class="iframe">
-        <iframe  width="560" height="315" src="https://www.youtube.com/embed/8O2c7LRh_GU" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8O2c7LRh_GU"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
-        
+
         <div>
             <a href="https://www.facebook.com./arenascoyunta">
                 <img class="facebook" src="./img/Facebook.png" alt="Facebook">
