--- a/html/contactos.html
+++ b/html/contactos.html
@@ -16,6 +16,7 @@
     <header>
         <div class="divMenu">
             <nav class="navegador">
+                <H1>LOGO</H1>
                 <ul class="menu">
                     <li class="menu__item"><a href="../index.html">Inicio</a></li>
                     <li class="menu__item"><a href="../html/nosotros.html">Sobre Nosotros</a></li>
@@ -25,13 +26,13 @@
                 </ul>
             </nav>
         </div>
-        <h1>Contáctenos</h1>
+        <span>Contáctenos</span>
     </header>
     <!-- Tablas -->
     <section>
         <h2>Nuestros Clientes</h2>
         <main>
-            <table>
+            <table class="tabla">
                 <tr>
                     <th>Nombre</th>
                     <th>Apellido</th>
@@ -56,9 +57,6 @@
             </table>
     </section>
     </main>
-    <footer>
-        Copy 2022
-    </footer>
 </body>
 
 </html>
