--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!----------- Menú ---------------->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-none header">
-        <div class="container-fluid">
+        <div class="container-fluid sticky-top">
             <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="./img/LOGOPARAPAGINA.png" alt="Logo"
                     width="500"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
