--- a/html/contactos.html
+++ b/html/contactos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctos</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="../css/estilo.css"> -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -28,9 +29,6 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active"aria-current="page" href="../html/contactos.html">Contácto</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="../html/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
@@ -38,6 +36,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../html/ubicacion.html">Ubicación</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active"aria-current="page" href="../html/contactos.html">Contácto</a>
                     </li>
                 </ul>
             </div>
