--- a/html/contactos.html
+++ b/html/contactos.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctos</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="../css/estilo.css"> -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 
     <!------------ Menú ----------------->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-none header">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-none">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img class="img-fluid" src="../img/LOGOPARAPAGINA.png" alt=""
                     width="500"></a>
