--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <!----------- Menú ---------------->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-none header">
-        <div class="container-fluid sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-none header"> 
+        <div class="container-fluid">
             <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="./img/LOGOPARAPAGINA.png" alt="Logo"
                     width="500"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end sticky" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
