--- a/html/contactos.html
+++ b/html/contactos.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contáctos</title>
+    <title>Contácto</title>
+    <meta name="description" content="Envianos un mensaje o llamanos!">
+    <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../scss/estilo.css">
 
 
@@ -121,7 +124,6 @@
     </section>
 
     <!-------------------------- Footer --------------------------->
-    <footer>
         <footer class="container-fluid footerbs">
             <div class="container p-5 text-white justify-content-center mt-5">
                 <div class="row align-items-center">
@@ -157,6 +159,11 @@
                 </div>
 
 
+            </div>
+            <div class="iconos">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-whatsapp"></i>
             </div>
         </footer>
         <script src="../js/bootstrap.bundle.min.js"></script>
