--- a/html/productos.html
+++ b/html/productos.html
@@ -9,7 +9,8 @@
     <meta name="description" content="Bolsones de aridos y materiales para la construcción">
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../scss/estilo.css">
 </head>
 
 <body>
@@ -100,6 +101,11 @@
                 </div>
         
         
+            </div>
+            <div class="iconos">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-whatsapp"></i>
             </div>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
