--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="Venta de aridos en bolsones en General Roca, Río Negro">
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../scss/estilo.css">
 </head>
 
 <body>
@@ -177,7 +178,11 @@
 
 
         </div>
-
+        <div class="iconos">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-whatsapp"></i>
+        </div>
     </footer>
 
 
