--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../scss/estilo.css">
+    <link rel="stylesheet" href="./scss/estilo.css">
 </head>
 
 <body>
