--- a/html/contactos.html
+++ b/html/contactos.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../scss/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-none header">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img class="img-fluid" src="../img/LOGOPARAPAGINA.png" alt=""
-                    width="500"></a>
+                    width="450"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,8 +49,13 @@
             </div>
         </div>
     </nav>
+    <section class="main"><div class="custom-shape-divider-bottom-1663027264">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+        </svg>
+    </div></section>
     <!--------------------- Formulario ------------------------->
-    <section class="main"></section>
+    
     <h1 class="container">Contáctenos:</h1>
     <section class="container acordeon">
         <div class="row gap-4 gap-md-0">
@@ -128,7 +133,7 @@
             <div class="container p-5 text-white justify-content-center mt-5">
                 <div class="row align-items-center">
                     <div class="col-xs-12 col-md-4 col-lg-3">
-                        <img class="img-fluid" src="../img/LOGOPARAPAGINA.png" alt="logo" width="250">
+                        <img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo" width="250">
                     </div>
                     <div class="col-xs-12 col-md-4 col-lg-3">
                         <p class="h3 titulofooter">ARENAS COYUNTA</p>
