--- a/html/productos.html
+++ b/html/productos.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../scss/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-none header">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img class="img-fluid" src="../img/LOGOPARAPAGINA.png" alt=""
-                    width="500"></a>
+                    width="450"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,20 +46,24 @@
             </div>
         </div>
     </nav>
-    <section class="main"></section>
+    <section class="main"><div class="custom-shape-divider-bottom-1663027264">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+        </svg>
+    </div></section>
             <h1 class="container">Nuestros Productos:</h1>
         
         <!----------------------- Grid gallery ------------------------>
-        <section class="container ">
+        <section class="container">
             <div class="row mt-5 gap-4 gap-md-0 ">
                 <img class="col-md-4 grida" src="../img/2Grid.png" alt="Foto de galería">
                 <img class="col-md-4 grida" src="../img/1Grid.png" alt="Foto de galería">
                 <img class="col-md-4 grida" src="../img/3Grid.png" alt="Foto de galería">
             </div>
             <div class="row mt-5 gap-4 gap-md-0">
-                <img class="col-md-4 rounded-pill grida" src="../img/4Grid.png" alt="Foto de galería">
-                <img class="col-md-4 rounded-pill grida" src="../img/5Grid.png" alt="Foto de galería">
-                <img class="col-md-4 rounded-pill grida" src="../img/6Grid.png" alt="Foto de galería">
+                <img class="col-md-4 grida" src="../img/4Grid.png" alt="Foto de galería">
+                <img class="col-md-4 grida" src="../img/5Grid.png" alt="Foto de galería">
+                <img class="col-md-4 grida" src="../img/6Grid.png" alt="Foto de galería">
             </div>
         </section>
     </main>
@@ -70,7 +74,7 @@
             <div class="container p-5 text-white justify-content-center mt-5">
                 <div class="row align-items-center">
                     <div class="col-xs-12 col-md-4 col-lg-3">
-                        <img class="img-fluid" src="../img/LOGOPARAPAGINA.png" alt="logo"
+                        <img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo"
                         width="250">
                     </div>
                     <div class="col-xs-12 col-md-4 col-lg-3">
