--- a/html/ubicacion.html
+++ b/html/ubicacion.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../scss/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-none header">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><img class="img-fluid" src="../img/LOGOPARAPAGINA.png"
-                        alt="" width="500"></a>
+                        alt="" width="450"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -46,14 +46,19 @@
                 </div>
             </div>
         </nav>
-        <section class="main"></section>
+        <section class="main"><div class="custom-shape-divider-bottom-1663027264">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+            </svg>
+        </div></section>
         <h1 class="container">Ubicación</h1>
 
         <h2 class="container">Encontranos en:</h2>
 
         <!------------------------------ Iframe Mapa ----------------------------->
         <div class="iframe">
-            <iframe
+            <img class="localizacionimg" src="../img/Localizacion.jpg" alt="Localizacion">
+            <iframe class="mapa"
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d193.69408438475023!2d-67.53836253274376!3d-39.03571734931531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1658446804548!5m2!1ses-419!2sar"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -65,7 +70,7 @@
             <div class="container p-5 text-white justify-content-center mt-5">
                 <div class="row align-items-center">
                     <div class="col-xs-12 col-md-4 col-lg-3">
-                        <img class="img-fluid" src="../img/LOGOPARAPAGINA.png" alt="logo"
+                        <img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo"
                         width="250">
                     </div>
                     <div class="col-xs-12 col-md-4 col-lg-3">
