Cambios para Proyecto Final

--- a/html/contactos.html
+++ b/html/contactos.html
@@ -86,7 +86,7 @@
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                Antártida Argentina 1351
+                                Vintter 1351 y Antartida Argentina
                             </div>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                Arenacoyunta@mail.com
+                                arenascoyunta@gmail.com
                             </div>
                         </div>
                     </div>
