--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -44,83 +44,94 @@
             </div>
         </div>
     </nav>
-    <section class="main"><div class="custom-shape-divider-bottom-1663027264">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
-        </svg>
-    </div></section>
+    <section class="main">
+        <div class="custom-shape-divider-bottom-1663027264">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+    </section>
     <h1 class="container">Sobre Nosotros</h1>
 
     <!-------------Texto -------------------------->
     <div class="container containernos">
-        <div class="image">
-        <img class="nosimg"src="../img/Transporte.jpg" alt="Transporte">
+
+        <img class="nosimg img-fluid" src="../img/Transporte.jpg" alt="Transporte">
+
+        <div class="text-left text">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, corrupti beatae molestias commodi
+                maxime
+                sequi facere iusto, ut nemo deserunt a earum optio dolorem possimus architecto obcaecati in nulla ipsam
+                voluptates ab quisquam exercitationem voluptatum molestiae harum. Blanditiis perspiciatis rem
+                dignissimos
+                officia, ipsa consequatur, maxime fuga quasi maiores labore magni! Perspiciatis corporis mollitia veniam
+                accusantium blanditiis magnam, id asperiores impedit debitis? Dolores magni labore modi molestias
+                officiis
+                fugit rerum, tenetur soluta iusto ullam ut quidem ipsa, eligendi fuga necessitatibus? Ratione voluptatum
+                voluptatem quae debitis expedita aliquam officia neque omnis distinctio possimus ab enim, optio
+                doloribus
+                magni assumenda deserunt id in modi est quas molestias. Laborum dolorem, explicabo illum, accusamus ad,
+                neque blanditiis porro repellat consequuntur exercitationem impedit beatae. Qui in odio quibusdam nihil
+                incidunt neque, cupiditate architecto, delectus quo, asperiores iure quis laboriosam quia earum sequi
+                odit
+                provident cum illum at reiciendis tempore quas officia error. Dolorem maiores tempora iusto sapiente.
+                Iure
+                dolorem eaque laboriosam, eum temporibus illo itaque fugiat cupiditate asperiores velit rem. Reiciendis
+                dicta tenetur corrupti tempore, assumenda eos possimus ea molestias deleniti iure, porro vel odio beatae
+                odit neque delectus aperiam? Voluptatibus cumque sunt esse eveniet fugiat corrupti sit beatae, dolor
+                ipsam.
+                Delectus impedit laborum magni quod?</p>
+        </div>
     </div>
-    <div class="text">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, corrupti beatae molestias commodi
-        maxime
-        sequi facere iusto, ut nemo deserunt a earum optio dolorem possimus architecto obcaecati in nulla ipsam
-        voluptates ab quisquam exercitationem voluptatum molestiae harum. Blanditiis perspiciatis rem dignissimos
-        officia, ipsa consequatur, maxime fuga quasi maiores labore magni! Perspiciatis corporis mollitia veniam
-        accusantium blanditiis magnam, id asperiores impedit debitis? Dolores magni labore modi molestias officiis
-        fugit rerum, tenetur soluta iusto ullam ut quidem ipsa, eligendi fuga necessitatibus? Ratione voluptatum
-        voluptatem quae debitis expedita aliquam officia neque omnis distinctio possimus ab enim, optio doloribus
-        magni assumenda deserunt id in modi est quas molestias. Laborum dolorem, explicabo illum, accusamus ad,
-        neque blanditiis porro repellat consequuntur exercitationem impedit beatae. Qui in odio quibusdam nihil
-        incidunt neque, cupiditate architecto, delectus quo, asperiores iure quis laboriosam quia earum sequi odit
-        provident cum illum at reiciendis tempore quas officia error. Dolorem maiores tempora iusto sapiente. Iure
-        dolorem eaque laboriosam, eum temporibus illo itaque fugiat cupiditate asperiores velit rem. Reiciendis
-        dicta tenetur corrupti tempore, assumenda eos possimus ea molestias deleniti iure, porro vel odio beatae
-        odit neque delectus aperiam? Voluptatibus cumque sunt esse eveniet fugiat corrupti sit beatae, dolor ipsam.
-        Delectus impedit laborum magni quod?</p>
-    </div>
-    </div>
 
 
-        <!---------------------- Footer ---------------------->
-        <footer class="container-fluid footerbs">
-            <div class="container p-5 text-white justify-content-center mt-5">
-                <div class="row align-items-center">
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo" width="250">
-                    </div>
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <p class="h3 titulofooter">ARENAS COYUNTA</p>
-                        <p class="h9 mb-6">Somos una empresa dedicada a la venta de aridos y materiales para la
-                            construcción.
-                            Contamos con la experiencia necesaria y el personal calificado.¡Contáctanos!</p>
-                    </div>
+    <!---------------------- Footer ---------------------->
+    <footer class="container-fluid footerbs">
+        <div class="container p-5 text-white justify-content-center mt-5">
+            <div class="row align-items-center">
+                <div class="col-xs-12 col-md-4 col-lg-3">
+                    <img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo" width="250">
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-3">
+                    <p class="h3 titulofooter">ARENAS COYUNTA</p>
+                    <p class="h9 mb-6">Somos una empresa dedicada a la venta de aridos y materiales para la
+                        construcción.
+                        Contamos con la experiencia necesaria y el personal calificado.¡Contáctanos!</p>
+                </div>
 
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <p class="h6 titulo2footer">Dirección:</p>
-                        <p class="h9 mb-6">Vintter 1351 y Antartida Argentina</p>
+                <div class="col-xs-12 col-md-4 col-lg-3">
+                    <p class="h6 titulo2footer">Dirección:</p>
+                    <p class="h9 mb-6">Vintter 1351 y Antartida Argentina</p>
 
-                        <p class="h6 titulo2footer">Telefono:</p>
-                        <p class="h9 mb-6">(0298) 4427 03932 - (0298) 4423 03932</p>
-
-
-                    </div>
-
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <p class="h6 titulo2footer">E-mail:</p>
-                        <p class="h9 mb-6">arenascoyunta@gmail.com</p>
-                        <p class="h6 titulo2footer">Horario de atención:</p>
-                        <p class="h9 mb-6">Lunes a Viernes de 08:00 a 18:00hs.<br>
-                            Sabados de 08:00 a 12:30 hs.</p>
-                    </div>
+                    <p class="h6 titulo2footer">Telefono:</p>
+                    <p class="h9 mb-6">(0298) 4427 03932 - (0298) 4423 03932</p>
 
 
                 </div>
 
+                <div class="col-xs-12 col-md-4 col-lg-3">
+                    <p class="h6 titulo2footer">E-mail:</p>
+                    <p class="h9 mb-6">arenascoyunta@gmail.com</p>
+                    <p class="h6 titulo2footer">Horario de atención:</p>
+                    <p class="h9 mb-6">Lunes a Viernes de 08:00 a 18:00hs.<br>
+                        Sabados de 08:00 a 12:30 hs.</p>
+                </div>
+
 
             </div>
-            <div class="iconos">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-whatsapp"></i>
-            </div>
-        </footer>
-        <script src="../js/bootstrap.bundle.min.js"></script>
+
+
+        </div>
+        <div class="iconos">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-whatsapp"></i>
+        </div>
+    </footer>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
