--- a/html/ubicacion.html
+++ b/html/ubicacion.html
@@ -56,9 +56,9 @@
         <h2 class="container">Encontranos en:</h2>
 
         <!------------------------------ Iframe Mapa ----------------------------->
-        <div class="iframe">
+        <div class="iframe container-fluid">
             <img class="localizacionimg" src="../img/Localizacion.jpg" alt="Localizacion">
-            <iframe class="mapa"
+            <iframe class="mapa container"
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d193.69408438475023!2d-67.53836253274376!3d-39.03571734931531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1658446804548!5m2!1ses-419!2sar"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
