Agregando ultimos cambios

--- a/html/contactos.html
+++ b/html/contactos.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contácto</title>
+    <title>Arenas Coyunta | Contácto</title>
     <meta name="description" content="Envianos un mensaje o llamanos!">
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/estilo.css">
+    <script src="https://kit.fontawesome.com/9170cde9b9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/estilo.css">
 
 
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
@@ -23,7 +24,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-none header">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img class="img-fluid" src="../img/LOGOPARAPAGINA.png" alt=""
+            <a class="navbar-brand" href="../index.html"><img class="img-fluid imglogo" src="../img/LOGOPARAPAGINA.png" alt=""
                     width="450"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -49,18 +50,14 @@
             </div>
         </div>
     </nav>
-    <section class="main"><div class="custom-shape-divider-bottom-1663027264">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
-        </svg>
-    </div></section>
+    <section class="main"></section>
     <!--------------------- Formulario ------------------------->
     
     <h1 class="container">Contáctenos:</h1>
     <section class="container acordeon">
         <div class="row gap-4 gap-md-0">
             <div class="col-md-6">
-                <h4>Información de contacto</h4>
+                <h4>Información de contacto:</h4>
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h4 class="accordion-header" id="headingOne">
@@ -72,7 +69,7 @@
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                298464753
+                                0298-464753
                             </div>
                         </div>
                     </div>
@@ -86,7 +83,7 @@
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                Vintter 1351 y Antartida Argentina
+                                Antártida Argentina 1351
                             </div>
                         </div>
                     </div>
@@ -94,20 +91,20 @@
                         <h4 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Corréo Electrónico
+                                Correo Electrónico
                             </button>
                         </h4>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                arenascoyunta@gmail.com
+                                Arenacoyunta@mail.com
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
-                <h4>Envianos un mensaje</h4>
+                <h4>Envianos un mensaje:</h4>
                 <form>
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
@@ -121,57 +118,70 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">Mensaje</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+                        <input type="email" class="form-control" style="height: 100px" id="exampleFormControlInput1" placeholder="">
                     </div>
+                    <div class="mb-3 envio">
+                        <button class="btn btn-primary" type="submit" disabled>Enviar</button>
+                      </div>
                 </form>
             </div>
         </div>
     </section>
+    <div class="redescon container">
+        <p class="nuestras">NUESTRAS REDES SOCIALES:</p>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+        <a href="https://web.whatsapp.com/" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a>
+    </div>
+
 
     <!-------------------------- Footer --------------------------->
-        <footer class="container-fluid footerbs">
-            <div class="container p-5 text-white justify-content-center mt-5">
-                <div class="row align-items-center">
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo" width="250">
-                    </div>
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <p class="h3 titulofooter">ARENAS COYUNTA</p>
-                        <p class="h9 mb-6">Somos una empresa dedicada a la venta de aridos y materiales para la
-                            construcción.
-                            Contamos con la experiencia necesaria y el personal calificado.¡Contáctanos!</p>
-                    </div>
+    <footer class="container-fluid footerbs">
+        <div class="container p-5 text-white justify-content-center mt-5">
+            <div class="row align-items-center">
+                <div class="col-xs-12 col-md-3 col-lg-3">
+                    <a href="../index.html"><img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo"
+                        width="250"></a>
+                </div>
+                <div class="col-xs-12 col-md-3 col-lg-3 foot2">
+                    <p class="h3 titulofooter">ARENAS COYUNTA</p>
+                    <p class="h9 mb-6">Somos una empresa dedicada a la venta de aridos y materiales para la
+                        construcción.
+                        Contamos con la experiencia necesaria y el personal calificado. ¡Contáctanos!</p>
+                </div>
 
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <p class="h6 titulo2footer">Dirección:</p>
-                        <p class="h9 mb-6">Vintter 1351 y Antartida Argentina</p>
+                <div class="col-xs-12 col-md-3 col-lg-3">
+                    <p class="h6 titulo2footer">Dirección:</p>
+                    <p class="h9 mb-6">Vintter 1351 y Antartida Argentina</p>
 
-                        <p class="h6 titulo2footer">Telefono:</p>
-                        <p class="h9 mb-6">(0298) 4427 03932 - (0298) 4423 03932</p>
-
-
-                    </div>
-
-                    <div class="col-xs-12 col-md-4 col-lg-3">
-                        <p class="h6 titulo2footer">E-mail:</p>
-                        <p class="h9 mb-6">arenascoyunta@gmail.com</p>
-                        <p class="h6 titulo2footer">Horario de atención:</p>
-                        <p class="h9 mb-6">Lunes a Viernes de 08:00 a 18:00hs.<br>
-                            Sabados de 08:00 a 12:30 hs.</p>
-                    </div>
+                    <p class="h6 titulo2footer">Telefono:</p>
+                    <p class="h9 mb-6">(0298) 4427 03932 - (0298) 4423 03932</p>
 
 
                 </div>
 
+                <div class="col-xs-12 col-md-3 col-lg-3 foot4">
+                    <p class="h6 titulo2footer">E-mail:</p>
+                    <p class="h9 mb-6">arenascoyunta@gmail.com</p>
+                    <p class="h6 titulo2footer">Horario de atención:</p>
+                    <p class="h9 mb-6">Lunes a Viernes de 08:00 a 18:00hs.<br>
+                        Sabados de 08:00 a 12:30 hs.</p>
+                </div>
+
 
             </div>
-            <div class="iconos">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-whatsapp"></i>
-            </div>
-        </footer>
+
+
+        </div>
+        <div class="iconos">
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://web.whatsapp.com/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <span class="copyr">© Copyright EzeMG 2022</span>
+        </div>
+    </footer>
         <script src="../js/bootstrap.bundle.min.js"></script>
+       
 </body>
 
 </html>
