--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arenas Coyunta - Inicio</title>
+    <title>Arenas Coyunta | Inicio</title>
     <meta name="description" content="Venta de aridos en bolsones en General Roca, Río Negro">
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-none header"> 
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="./img/LOGOPARAPAGINA.png" alt="Logo"
+            <a class="navbar-brand" href="./index.html"><img class="img-fluid imglogo" src="./img/LOGOPARAPAGINA.png" alt="Logo"
                     width="450"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -44,11 +44,7 @@
             </div>
         </div>
     </nav>
-    <section class="main"><div class="custom-shape-divider-bottom-1663027264">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
-        </svg>
-    </div></section>
+    <section class="main"></section>
 
 
     <!--------- Carrusel --------------->
@@ -77,15 +73,14 @@
     </div>
 
     <!------------------ Cartas ------------------>
-    <div class="container">
+    <div class="container cartitas">
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card h-100 w-60">
                     <img src="./img/1Grid.png" class="card-img-top" alt="Arena en bolsa">
                     <div class="card-body">
-                        <h5 class="card-title">Servicio de Envios</h5>
-                        <p class="card-text cardtext">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <a href="./html/productos.html"><h5 class="card-title">Servicio de Envios</h5></a>
+                        <p class="card-text cardtext">Envio de bolsones totalmente gratis, te lo dejamos en la vereda de tu casa o en donde más sea conveniente.</p>
                     </div>
                     <div class="card-footer">
 
@@ -96,9 +91,8 @@
                 <div class="card h-100 w-60">
                     <img src="./img/2Grid.png" class="card-img-top" alt="Piedra">
                     <div class="card-body">
-                        <h5 class="card-title">Piedras Seleccionadas</h5>
-                        <p class="card-text cardtext">This card has supporting text below as a natural lead-in to additional
-                            content.
+                        <a href="./html/productos.html"><h5 class="card-title">Piedras Seleccionadas</h5></a>
+                        <p class="card-text cardtext">Todo tipo de piedras para tu elección o tipo de obra.
                         </p>
                     </div>
                     <div class="card-footer">
@@ -110,11 +104,8 @@
                 <div class="card h-100 w-60">
                     <img src="./img/3Grid.png" class="card-img-top" alt="Puzolana">
                     <div class="card-body">
-                        <h5 class="card-title">Puzolana</h5>
-                        <p class="card-text cardtext">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height
-                            action.</p>
+                        <a href="./html/productos.html"><h5 class="card-title">Puzolana en bolsones</h5></a>
+                        <p class="card-text cardtext">La mejor Puzolana del mercado en bolsones.</p>
                     </div>
                     <div class="card-footer">
 
@@ -125,11 +116,8 @@
                 <div class="card h-100 w-60">
                     <img src="./img/4Grid.png" class="card-img-top" alt="Puzolana">
                     <div class="card-body">
-                        <h5 class="card-title">Arena</h5>
-                        <p class="card-text cardtext">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height
-                            action.</p>
+                        <a href="./html/productos.html"><h5 class="card-title">Arena en bolsones</h5></a>
+                        <p class="card-text cardtext">Tenemos todo tipo de arenas para tu obra.</p>
                     </div>
                     <div class="card-footer">
 
@@ -149,17 +137,18 @@
     <footer class="container-fluid footerbs">
         <div class="container p-5 text-white justify-content-center mt-5">
             <div class="row align-items-center">
-                <div class="col-xs-12 col-md-4 col-lg-3">
-                    <img class="img-fluid logofoot" src="./img/LOGOPARAPAGINA.png" alt="logo" width="250">
+                <div class="col-xs-12 col-md-3 col-lg-3">
+                    <a href="./index.html"><img class="img-fluid logofoot" src="./img/LOGOPARAPAGINA.png" alt="logo"
+                        width="250"></a>
                 </div>
-                <div class="col-xs-12 col-md-4 col-lg-3">
+                <div class="col-xs-12 col-md-3 col-lg-3 foot2">
                     <p class="h3 titulofooter">ARENAS COYUNTA</p>
                     <p class="h9 mb-6">Somos una empresa dedicada a la venta de aridos y materiales para la
                         construcción.
-                        Contamos con la experiencia necesaria y el personal calificado.¡Contáctanos!</p>
+                        Contamos con la experiencia necesaria y el personal calificado. ¡Contáctanos!</p>
                 </div>
 
-                <div class="col-xs-12 col-md-4 col-lg-3">
+                <div class="col-xs-12 col-md-3 col-lg-3">
                     <p class="h6 titulo2footer">Dirección:</p>
                     <p class="h9 mb-6">Vintter 1351 y Antartida Argentina</p>
 
@@ -169,7 +158,7 @@
 
                 </div>
 
-                <div class="col-xs-12 col-md-4 col-lg-3">
+                <div class="col-xs-12 col-md-3 col-lg-3 foot4">
                     <p class="h6 titulo2footer">E-mail:</p>
                     <p class="h9 mb-6">arenascoyunta@gmail.com</p>
                     <p class="h6 titulo2footer">Horario de atención:</p>
@@ -183,12 +172,12 @@
 
         </div>
         <div class="iconos">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-whatsapp"></i>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://web.whatsapp.com/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <span class="copyr">© Copyright EzeMG 2022</span>
         </div>
     </footer>
-
 
     <script src="./js/bootstrap.bundle.min.js">
     </script>
