--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>Arenas Coyunta | Nosotros</title>
     <meta name="description" content="Somos una empresa de aridos en bolsones">
     <meta name="keywords" content="Aridos,Bolsones,Venta,General Roca,Rio Negro,Construccion,Argentina">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-none header">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img class="img-fluid" src="../img/LOGOPARAPAGINA.png" alt=""
+            <a class="navbar-brand" href="../index.html"><img class="img-fluid imglogo" src="../img/LOGOPARAPAGINA.png" alt=""
                     width="450"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -44,16 +44,7 @@
             </div>
         </div>
     </nav>
-    <section class="main">
-        <div class="custom-shape-divider-bottom-1663027264">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                preserveAspectRatio="none">
-                <path
-                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                    class="shape-fill"></path>
-            </svg>
-        </div>
-    </section>
+    <section class="main"></section>
     <h1 class="container">Sobre Nosotros</h1>
 
     <!-------------Texto -------------------------->
@@ -62,28 +53,13 @@
         <img class="nosimg img-fluid" src="../img/Transporte.jpg" alt="Transporte">
 
         <div class="text-left text">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, corrupti beatae molestias commodi
-                maxime
-                sequi facere iusto, ut nemo deserunt a earum optio dolorem possimus architecto obcaecati in nulla ipsam
-                voluptates ab quisquam exercitationem voluptatum molestiae harum. Blanditiis perspiciatis rem
-                dignissimos
-                officia, ipsa consequatur, maxime fuga quasi maiores labore magni! Perspiciatis corporis mollitia veniam
-                accusantium blanditiis magnam, id asperiores impedit debitis? Dolores magni labore modi molestias
-                officiis
-                fugit rerum, tenetur soluta iusto ullam ut quidem ipsa, eligendi fuga necessitatibus? Ratione voluptatum
-                voluptatem quae debitis expedita aliquam officia neque omnis distinctio possimus ab enim, optio
-                doloribus
-                magni assumenda deserunt id in modi est quas molestias. Laborum dolorem, explicabo illum, accusamus ad,
-                neque blanditiis porro repellat consequuntur exercitationem impedit beatae. Qui in odio quibusdam nihil
-                incidunt neque, cupiditate architecto, delectus quo, asperiores iure quis laboriosam quia earum sequi
-                odit
-                provident cum illum at reiciendis tempore quas officia error. Dolorem maiores tempora iusto sapiente.
-                Iure
-                dolorem eaque laboriosam, eum temporibus illo itaque fugiat cupiditate asperiores velit rem. Reiciendis
-                dicta tenetur corrupti tempore, assumenda eos possimus ea molestias deleniti iure, porro vel odio beatae
-                odit neque delectus aperiam? Voluptatibus cumque sunt esse eveniet fugiat corrupti sit beatae, dolor
-                ipsam.
-                Delectus impedit laborum magni quod?</p>
+            <p>ARENAS COYUNTA es una empresa Rionegrina de la localidad de General Roca especializada en venta de
+                materiales de construcción. <br><br>Hemos adquirido excelentes resultados en el mercado, gracias a la calidad de
+                nuestros materiales para la construcción y al alto grado de satisfacción mostrado por los clientes. <br><br>En
+                ARENAS COYUNTA buscamos ofrecer un servicio que nos permita cumplir con sus expectativas, por ello,
+                brindamos atención personalizada y productos de la mejor calidad. <br><br>Atendemos cualquier demanda, ya sea
+                mayorista o minorista, brindando siempre el mejor precio y la más cordial atención a cada uno de
+                nuestros clientes.
         </div>
     </div>
 
@@ -92,17 +68,18 @@
     <footer class="container-fluid footerbs">
         <div class="container p-5 text-white justify-content-center mt-5">
             <div class="row align-items-center">
-                <div class="col-xs-12 col-md-4 col-lg-3">
-                    <img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo" width="250">
+                <div class="col-xs-12 col-md-3 col-lg-3">
+                    <a href="../index.html"><img class="img-fluid logofoot" src="../img/LOGOPARAPAGINA.png" alt="logo"
+                        width="250"></a>
                 </div>
-                <div class="col-xs-12 col-md-4 col-lg-3">
+                <div class="col-xs-12 col-md-3 col-lg-3 foot2">
                     <p class="h3 titulofooter">ARENAS COYUNTA</p>
                     <p class="h9 mb-6">Somos una empresa dedicada a la venta de aridos y materiales para la
                         construcción.
-                        Contamos con la experiencia necesaria y el personal calificado.¡Contáctanos!</p>
+                        Contamos con la experiencia necesaria y el personal calificado. ¡Contáctanos!</p>
                 </div>
 
-                <div class="col-xs-12 col-md-4 col-lg-3">
+                <div class="col-xs-12 col-md-3 col-lg-3">
                     <p class="h6 titulo2footer">Dirección:</p>
                     <p class="h9 mb-6">Vintter 1351 y Antartida Argentina</p>
 
@@ -112,7 +89,7 @@
 
                 </div>
 
-                <div class="col-xs-12 col-md-4 col-lg-3">
+                <div class="col-xs-12 col-md-3 col-lg-3 foot4">
                     <p class="h6 titulo2footer">E-mail:</p>
                     <p class="h9 mb-6">arenascoyunta@gmail.com</p>
                     <p class="h6 titulo2footer">Horario de atención:</p>
@@ -126,9 +103,10 @@
 
         </div>
         <div class="iconos">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-whatsapp"></i>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://web.whatsapp.com/" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <span class="copyr">© Copyright EzeMG 2022</span>
         </div>
     </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
